<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="342dp"
        android:layout_height="690dp"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#EDE7F6">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/register_title"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameInput"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:hint="@string/full_name_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/icInput"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:hint="@string/ic_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactInput"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:hint="@string/contact_no_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:hint="@string/email_title" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:hint="@string/password_title" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmedInput"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:hint="@string/confirmed_password_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/addressInput"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/address_title"/>



            <Button
                android:id="@+id/registerBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/register_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/haveText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_have_account_text" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>