<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.EditinfoFragment"
    android:background="#EDE7F6"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="299dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        app:cardCornerRadius="25dp">



        <EditText
            android:id="@+id/addressInput"
            android:layout_width="294dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:backgroundTint="#EDE7F6"
            android:ems="10"
            android:hint="@string/address_title"
            android:inputType="textPostalAddress" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:backgroundTint="#EDE7F6"
            android:text="@string/save_title"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactEditInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EDE7F6"
                android:hint="@string/contact_no_hint" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>